update swagger endpoints
