# docs/swagger.json
@@ -19,7 +19,6 @@
     "paths": {
         "/api/v1/images": {
             "get": {
-                "description": "gets all files from the server.",
                 "consumes": [
                     "*/*"
                 ],
@@ -27,9 +26,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "root"
+                    "image-handler"
                 ],
-                "summary": "Show the status of server.",
+                "summary": "Get all images from the server.",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -43,15 +42,23 @@
             "post": {
                 "description": "get the status of server.",
                 "consumes": [
-                    "*/*"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "root"
+                    "image-handler"
                 ],
                 "summary": "Show the status of server.",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "single file upload",
+                        "name": "myFile",
+                        "in": "formData"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
